--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
 	</parent>
 
 	<groupId>com.example</groupId>
-	<artifactId>homefly-appointment</artifactId>
+	<artifactId>loveresale-appointment</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>homefly-appointment</name>
-	<description>homefly-appointment</description>
+	<name>loveresale-appointment</name>
+	<description>loveresale-appointment</description>
 
 	<properties>
 		<java.version>17</java.version>
